--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@ board_build.flash_mode = qio
 ; Monitor serial
 monitor_speed = 115200
 monitor_filters = default
+monitor_dtr = 0
+monitor_rts = 0
 
 ; Porta serial específica (ajuste se necessário)
 upload_port = COM3
@@ -30,8 +32,11 @@ lib_deps =
     me-no-dev/AsyncTCP@^1.1.1
 
 ; Flags de compilação
+; IMPORTANTE: Habilita USB Serial/JTAG para comunicação serial
 build_flags = 
     -DCORE_DEBUG_LEVEL=3
+    -DARDUINO_USB_MODE=1
+    -DARDUINO_USB_CDC_ON_BOOT=1
     ; -DBOARD_HAS_PSRAM  ; Removido: placa pode não ter PSRAM ou configuração diferente
 
 ; Configuração SPIFFS para arquivos HTML
