Adiciona suporte WireGuard VPN e gera carta psicromÃ©trica
- Implementa cliente WireGuard VPN no ESP32
- Adiciona interface web para configuraÃ§Ã£o do WireGuard
- Corrige persistÃªncia de configuraÃ§Ãµes WireGuard apÃ³s reinÃ­cio
- Adiciona script para gerar carta psicromÃ©trica com eixos logarÃ­tmicos
- Adiciona script para grÃ¡fico 3D da calibraÃ§Ã£o
- Atualiza pontos de calibraÃ§Ã£o e constantes ajustadas

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,8 @@ partitions.csv.bak
 
 # Cache
 .cache/
+
+# Arquivos gerados da análise psicrométrica (opcional - descomente se não quiser commitá-los)
+psicrometria_analise/*.png
+psicrometria_analise/constantes_*.txt
+psicrometria_analise/pontos_calibracao.txt
