--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,7 @@ lib_deps =
     bblanchon/ArduinoJson@^6.21.3
     me-no-dev/ESPAsyncWebServer@^3.0.0
     me-no-dev/AsyncTCP@^1.1.1
+    ciniml/WireGuard-ESP32@^0.1.5
 
 ; Flags de compilação
 ; IMPORTANTE: Habilita USB Serial/JTAG para comunicação serial
@@ -37,7 +38,13 @@ build_flags =
     -DCORE_DEBUG_LEVEL=3
     -DARDUINO_USB_MODE=1
     -DARDUINO_USB_CDC_ON_BOOT=1
+    -DconfigUSE_MALLOC_FAILED_HOOK=1
     ; -DBOARD_HAS_PSRAM  ; Removido: placa pode não ter PSRAM ou configuração diferente
+
+; Aumenta o tamanho da stack para evitar stack overflow
+; Padrão é 8192 bytes, aumentamos para 16384 bytes
+board_build.extra_flags = 
+    -Wl,--defsym=loopTaskStackSize=16384
 
 ; Configuração SPIFFS para arquivos HTML
 board_build.filesystem = littlefs
